<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentsActivity">

    <EditText
        android:id="@+id/courseLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/course"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/lNameLabel"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/lNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/lname"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/fNameLabel"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/studentText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/newStudent"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-29dp" />

    <EditText
        android:id="@+id/fNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/fname"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/studentText"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/addStudentBut"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="120dp"
        android:layout_weight="1"
        android:text="@string/addStudent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameLabel" />

    <Button
        android:id="@+id/viewStudentsBut"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_weight="1"
        android:text="@string/viewStudents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fNameLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>